<resources>
    <string name="app_name">hessdorf-reflex</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SinglePlayerButton">Single Player</string>
    <string name="MultiPlayerButton">Multi Player</string>
    <string name="StatsButton">View Stats</string>
    <string name="title_activity_single_player_mode">"Single Player Mode"</string>
    <string name="click_quick">"CLICK ME, QUICK!"</string>

    <string name = "single_player_info">"Here's some information about being a single player."</string>
    <string name = "ok">"OK"</string>
    <string name="title_activity_multi_player_mode">MultiPlayerMode</string>
    <string name="title_activity_two_player">TwoPlayer</string>

    <string name="title_player_one">Player One</string>
    <string name="title_player_two">Player Two</string>
    <string name="title_player_three">Player Three</string>
    <string name="title_player_four">Player Four</string>
    <string name="title_activity_three_player">ThreePlayer</string>
    <string name="title_activity_four_player">FourPlayer</string>
    <string name="title_activity_stats_mode">StatsMode</string>
</resources>
