<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="victoriahessdorfer.com.hessdorf_reflex.ThreePlayerActivity">

    <Button
        android:layout_width="500dp"
        android:layout_height="165dp"
        android:text="@string/title_player_one"
        android:id="@+id/P1_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="chosenButton"
        />

    <Button
        android:layout_width="500dp"
        android:layout_height="165dp"
        android:text="@string/title_player_two"
        android:id="@+id/P2_button"
        android:layout_below="@+id/P1_button"
        android:layout_alignParentStart="true"
        android:onClick="chosenButton"
        />

    <Button
        android:layout_width="500dp"
        android:layout_height="165dp"
        android:text="@string/title_player_three"
        android:id="@+id/P3_button"
        android:layout_below="@+id/P2_button"
        android:layout_alignParentStart="true"
        android:onClick="chosenButton"
        />

</RelativeLayout>
